Removes spacing issue on mobile

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -39,7 +39,4 @@ p {
 	#Headshot {
 		width: 200px;
 	}
-	#Intro_Loop {
-		margin-top: -1.5em;
-	}
 }
